request and login page

--- a/Course_Messenger.App/Views/SignUpPage.xaml
+++ b/Course_Messenger.App/Views/SignUpPage.xaml
@@ -37,6 +37,6 @@
         <Button
             Command="{Binding CreateCommand}"
             HorizontalOptions="Fill"
-            Text="SignIn" />
+            Text="SignUp" />
     </VerticalStackLayout>
 </ContentPage>
