set photo to profile

--- a/Course_Messenger.App/Views/MainPage.xaml
+++ b/Course_Messenger.App/Views/MainPage.xaml
@@ -16,5 +16,8 @@
         <Tab Title="Chats">
             <ShellContent ContentTemplate="{DataTemplate local:ChatsPage}" />
         </Tab>
+        <Tab Title="Profile">
+            <ShellContent ContentTemplate="{DataTemplate local:ProfilePage}" />
+        </Tab>
     </TabBar>
 </Shell>
