--- a/Course_Messenger.App/Views/ChatsPage.xaml
+++ b/Course_Messenger.App/Views/ChatsPage.xaml
@@ -3,11 +3,50 @@
     x:Class="Course_Messenger.App.Views.ChatsPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="ChatsPage">
-    <VerticalStackLayout>
-        <Label
-            HorizontalOptions="Center"
-            Text="All My Chats!"
-            VerticalOptions="Center" />
-    </VerticalStackLayout>
+    xmlns:local="clr-namespace:Course_Messenger.App.Views"
+    xmlns:viewmodel="clr-namespace:Course_Messenger.App.ViewModels">
+    <ContentPage.BindingContext>
+        <viewmodel:ChatsPageViewModel />
+    </ContentPage.BindingContext>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Entry Text="{Binding NamePattern, Mode=TwoWay}" />
+        <CollectionView Grid.Row="1" ItemsSource="{Binding Elements}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="5">
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ContactsPageViewModel}}, Path=OpenChatCommand}"
+                                CommandParameter="{Binding}"
+                                NumberOfTapsRequired="1" />
+                        </Grid.GestureRecognizers>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="110" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <local:UserPhotoView BindingContext="{Binding}" />
+                        <VerticalStackLayout Grid.Column="1">
+                            <Label SemanticProperties.HeadingLevel="Level2" Text="{Binding UserTo.Name}" />
+                            <Label SemanticProperties.HeadingLevel="Level4" Text="{Binding UserTo.Email}" />
+                            <Label SemanticProperties.HeadingLevel="Level4" Text="{Binding LastMessageShort}" />
+                        </VerticalStackLayout>
+                        <BoxView
+                            Grid.Row="1"
+                            Grid.ColumnSpan="2"
+                            Margin="5"
+                            HeightRequest="2"
+                            Color="{StaticResource Primary}" />
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </Grid>
 </ContentPage>
