--- a/Course_Messenger.App/Views/ChatUserPage.xaml
+++ b/Course_Messenger.App/Views/ChatUserPage.xaml
@@ -15,8 +15,7 @@
             x:Name="MessagesView"
             BackgroundColor="{StaticResource MidnightBlue}"
             ItemsSource="{Binding Messages}"
-            ItemsUpdatingScrollMode="KeepLastItemInView"
-            VerticalOptions="End">
+            ItemsUpdatingScrollMode="KeepLastItemInView">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Frame
